# - an entry should not explain why a change was made, but rather what the change was
#   (the explanation of why belongs in the source code itself)
#
# http://www.cybop.net
# - Cybernetics Oriented Programming -
#
# @version $RCSfile: ChangeLog,v $ $Revision: 1.147 $ $Date: 2009-10-06 21:25:26 $ $Author: christian $
# @author Christian Heller <christian.heller@tuxtax.de>
#

2011-06-27  Christian Heller  <christian.heller@tuxtax.de>

        * Continue restructuring container functionality (fraction, compound)

2011-06-26  Christian Heller  <christian.heller@tuxtax.de>

        * Continue restructuring container functionality (part)

2011-06-25  Christian Heller  <christian.heller@tuxtax.de>

        * Rename "executor/referencer/" into "executor/copier/",
            which is used for setting (copying) container elements;
            getting container elements is done via pointer array,
            which delivers a reference to the desired element
        * Adjust destination item's count automatically (similar to a wrapper)
        * Continue restructuring container functionality (array and item)

2011-06-06  Christian Heller  <christian.heller@tuxtax.de>

        * Search for solutions for compound-part handling
        * Decide, that compound should be just a pointer value storing part structures

2011-06-05  Christian Heller  <christian.heller@tuxtax.de>

        * Continue implementing and testing memoriser (allocation, deallocation)
        * Restructure container functionality (allocate, set)

2011-06-03  Christian Heller  <christian.heller@tuxtax.de>

        * Continue "executor/referencer/setter/"
        * Add file "executor/converter/encoder/abstraction_encoder.c"
        * Add function "test_memoriser_allocation"
        * Add file "offset_adder.c" for factoring out offset functionality

2011-05-27  Christian Heller  <christian.heller@tuxtax.de>

        * Implement "model" and "item" in "executor/memoriser/allocator/"