@@ -71,14 +71,17 @@ static int* FRACTION_PRIMITIVE_MEMORY_ABSTRACTION = NUMBER_2_INTEGER_MEMORY_MODE
 /** The integer primitive memory abstraction. */
 static int* INTEGER_PRIMITIVE_MEMORY_ABSTRACTION = NUMBER_3_INTEGER_MEMORY_MODEL_ARRAY;
 
+/** The part primitive memory abstraction. */
+static int* PART_PRIMITIVE_MEMORY_ABSTRACTION = NUMBER_4_INTEGER_MEMORY_MODEL_ARRAY;
+
 /** The pointer primitive memory abstraction. */
-static int* POINTER_PRIMITIVE_MEMORY_ABSTRACTION = NUMBER_4_INTEGER_MEMORY_MODEL_ARRAY;
+static int* POINTER_PRIMITIVE_MEMORY_ABSTRACTION = NUMBER_5_INTEGER_MEMORY_MODEL_ARRAY;
 
 /** The unsigned long primitive memory abstraction. */
-static int* UNSIGNED_LONG_PRIMITIVE_MEMORY_ABSTRACTION = NUMBER_5_INTEGER_MEMORY_MODEL_ARRAY;
+static int* UNSIGNED_LONG_PRIMITIVE_MEMORY_ABSTRACTION = NUMBER_6_INTEGER_MEMORY_MODEL_ARRAY;
 
 /** The wide character primitive memory abstraction. */
-static int* WIDE_CHARACTER_PRIMITIVE_MEMORY_ABSTRACTION = NUMBER_6_INTEGER_MEMORY_MODEL_ARRAY;
+static int* WIDE_CHARACTER_PRIMITIVE_MEMORY_ABSTRACTION = NUMBER_7_INTEGER_MEMORY_MODEL_ARRAY;
 
 //
 // Knowledge.
@@ -90,6 +93,7 @@ static int* WIDE_CHARACTER_PRIMITIVE_MEMORY_ABSTRACTION = NUMBER_6_INTEGER_MEMOR
  * Compounds consist of parts, which may be other models
  * or primitive values.
  */
+//?? TODO: Delete the line below later!
 static int* COMPOUND_PRIMITIVE_MEMORY_ABSTRACTION = NUMBER_10_INTEGER_MEMORY_MODEL_ARRAY;
 
 /* PRIMITIVE_MEMORY_ABSTRACTION_SOURCE */
