@@ -30,6 +30,8 @@
 #include "../../../constant/model/log/message_log_model.c"
 #include "../../../constant/name/memory/item_memory_name.c"
 #include "../../../constant/name/memory/primitive_memory_name.c"
+#include "../../../executor/memoriser/allocator/array_allocator.c"
+#include "../../../executor/copier/array_copier.c"
 #include "../../../logger/logger.c"
 
 /**
