@@ -28,7 +28,8 @@
 
 #include "../../../constant/model/log/message_log_model.c"
 #include "../../../logger/logger.c"
-#include "../../../executor/memoriser/allocator/model_allocator.c"
+#include "../../../executor/memoriser/deallocator/item_deallocator.c"
+#include "../../../executor/memoriser/deallocator/model_deallocator.c"
 
 /**
  * Deallocates the part.
